--- a/.github/workflows/.playwright.yml
+++ b/.github/workflows/.playwright.yml
@@ -2,30 +2,30 @@ name: Playwright Tests
 
 on:
   push:
-    branches: [ "main" ] # Запускать пайплайн при отправке кода в ветку main
+    branches: [ "main" ]  # Запускать пайплайн при отправке кода в ветку main
   pull_request:
-    branches: [ "main" ] # Запускать пайплайн при создании pull request в ветку main
+    branches: [ "main" ]  # Запускать пайплайн при создании pull request в ветку main
 
 jobs:
   test:
-    timeout-minutes: 60 # Максимальное время выполнения задания
-    runs-on: windows-latest # Использовать Ubuntu для выполнения задания
+    timeout-minutes: 60  # Максимальное время выполнения задания
+    runs-on: windows-latest  # Использовать Windows для выполнения задания
 
     steps:
-      - uses: actions/checkout@v4 # Клонировать репозиторий в CI-окружение
-      - uses: actions/setup-node@v4 # Установить Node.js
+      - uses: actions/checkout@v4  # Клонировать репозиторий в CI-окружение
+      - uses: actions/setup-node@v4  # Установить Node.js
         with:
-          node-version: 18 # Версия Node.js
-      - name: Install dependencies # Установить зависимости проекта
+          node-version: 18  # Версия Node.js
+      - name: Install dependencies  # Установить зависимости проекта
         run: npm install
-      - name: Install Playwright Browsers # Установить браузеры Playwright
+      - name: Install Playwright Browsers  # Установить браузеры Playwright
         run: npx playwright install --with-deps
-      - name: Run Playwright tests # Запустить тесты Playwright
+      - name: Run Playwright tests  # Запустить тесты Playwright
         run: npx playwright test
-      - name: Upload Playwright report # Загрузить отчет Playwright
-        if: always() # Загружать отчет даже в случае ошибок
-        uses: actions/upload-artifact@v3
+      - name: Upload Playwright report  # Загрузить отчет Playwright
+        if: always()  # Загружать отчет даже в случае ошибок
+        uses: actions/upload-artifact@v4  # ОБНОВЛЕННАЯ ВЕРСИЯ
         with:
           name: playwright-report
-          path: playwright-report/ # Путь к отчету Playwright
-          retention-days: 30 # Хранить отчет 30 дней
+          path: playwright-report/  # Путь к отчету Playwright
+          retention-days: 30  # Хранить отчет 30 дней
